--- a/css/common.css
+++ b/css/common.css
@@ -33,3 +33,117 @@ a:link{
     text-align: left;
     text-decoration: none;
 }
+textarea{
+	padding: 6px;
+	border: #ddd solid 1px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+}
+input[type="text"] {
+	height: 28px;
+	padding: 0 6px;
+	border: #ddd solid 1px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+}
+/*layout*/
+.header{
+    width:100%;
+    height:50px;
+}
+.h_item{
+       float:left;
+}
+.h_logo{
+    width:200px;
+    height:100%;
+}
+.h_nav .on{
+    border-bottom: 4px solid #dd4b39;
+    margin: 0 15px;
+}
+.h_n_item{
+    float: left;
+    width: 70px;
+    text-align: center;
+}
+.h_n_item>a{
+    color: #222;
+    line-height: 46px;
+    font-size: 16px;
+    display: inline-block;
+}
+.h_n_item:hover{
+    border-bottom: 4px solid red;
+}
+.content{
+    margin-top:10px;
+    width:100%;
+}
+.c_left{
+    float:left;
+    width:150px;
+}
+.c_left .on{
+    border-left: 4px solid #dd4b39;
+    padding-left: 16px;
+    background-color:#f6f6f6
+}
+.c_l_item{
+    padding-left: 20px;
+    margin:10px 0;
+}
+.c_l_item>a{
+    color:#222;
+    line-height: 50px;
+    font-size: 16px;
+}
+.c_l_item:hover{
+    border-left: 4px solid red;
+    padding-left: 16px;
+}
+.c_right{
+     float: left;
+     background-color:#f6f6f6;
+     background-color: #fff;
+}
+.con_div{
+    background-color: #fff;
+}
+
+/*form*/
+.div_form{
+	padding:10px 20px;
+}
+.div_form h2{
+	line-height:40px;
+    font-size:15px;
+    padding-left:20px;
+}
+.div_form .form_item{
+	margin-bottom: 20px;
+}
+
+.div_form .f_i_label{
+	float: left;
+	width: 72px;
+	padding-top: 5px;
+	text-align: right;
+width: 100px;
+}
+.div_form .f_i_input{
+	margin-left: 120px;
+}
+.div_form input[type="submit"]{
+    border:1px solid #f37803;
+    padding: 5px 15px;
+    background-color:#FFA600;
+    color:#fff;
+    font-weight:bold;
+    margin-left: 100px;
+}
+.div_form input[type="submit"]:hover{
+	background-color:#FF7300;
+}
