--- a/css/common.css
+++ b/css/common.css
@@ -48,6 +48,28 @@ input[type="text"] {
 	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
+input[type="submit"]{
+    border:1px solid #f37803;
+    padding: 5px 15px;
+    background-color:#FFA600;
+    color:#fff;
+    font-weight:bold;
+    margin-left: 100px;
+}
+input[type="submit"]:hover{
+    background-color:#FF7300;
+}
+.a_btn{
+     padding: 5px 15px;
+     border:1px solid #FFA600;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    color:#222;
+}
+.a_btn:hover{
+	border:1px solid #FF7300;
+}
 /*layout*/
 .header{
     width:100%;
@@ -131,19 +153,44 @@ input[type="text"] {
 	width: 72px;
 	padding-top: 5px;
 	text-align: right;
-width: 100px;
+    width: 100px;
 }
 .div_form .f_i_input{
 	margin-left: 120px;
 }
-.div_form input[type="submit"]{
-    border:1px solid #f37803;
-    padding: 5px 15px;
-    background-color:#FFA600;
-    color:#fff;
-    font-weight:bold;
-    margin-left: 100px;
+
+/*div*/
+.div_item{
+    padding:10px 20px;
 }
-.div_form input[type="submit"]:hover{
-	background-color:#FF7300;
+/*div list*/
+.div_list{
+    padding:10px 20px;
+}
+.d_l_item{
+	padding:10px 0;
+    border-bottom: #b2b2b2 dotted 1px;
+    height: 60px;
+}
+.d_l_item:hover{
+	background-color: #f6f6f6;
+}
+.d_l_i_title{
+	line-height:40px;
+    font-size: 14px;
+}
+.d_l_i_info{
+    color:#666;
+}
+.d_l_i_500{
+	min-width:500px;
+}
+.d_l_i_150{
+    min-width:150px;
+}
+.d_l_i_c{
+	float:left;
+}
+.text_gray{
+	color:#666;
 }
